# ansible-module-userdetect

./: .gitignore  .travis.yml  Makefile  README.md  README.rst  README_template.rst  description  pyproject.toml  setup.py  test.yml  tox.ini  userdetect.py
.github/workflows/: tests.yml
test/: test_userdetect.py
tests/: test_userdetect.py
