[tool.poetry]
name = "userdetect"
version = "0.1.0"
description = "Ansible module to detect the existence of user(s) on UNIX operation systems. "
authors = ["Josef Friedrich <josef@friedrich.rocks>"]
readme = "README.rst"
license = "GPL-3.0-only"
repository = "https://github.com/Josef-Friedrich/ansible-module-userdetect"
classifiers = [
    "Private :: Do not Upload",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
ansible = "^6.0.0"
pytest = "^7.1.2"
readme-patcher = "^0.5.0"

[build-system]
requires = ["poetry>=1.2.0b2"]
build-backend = "poetry.masonry.api"
